Force overwrite remote repository